--- a/reto2/nosotros.html
+++ b/reto2/nosotros.html
@@ -17,7 +17,7 @@
               <li><a href="/reto2/tienda.html">Tienda</a></li>
               <li><a href="/reto2/blog.html">Blog</a></li>
               <li><a href="/reto2/galeria.html">Galería</a></li>
-              <li><a href="reto2/contacto.html">Contacto</a></li>
+              <li><a href="/reto2/contacto.html">Contacto</a></li>
             </ul>
           </nav>
         </div>
