Ultimo commit tercer hackaton

--- a/reto2/blog.html
+++ b/reto2/blog.html
@@ -25,79 +25,76 @@
       <main>
         <h2>Nuestro Blog</h2>
         <section>
-          <div>
-            <article>
-              <h2>Guía de Colores</h2>
-              <div>
-                <img src="/reto2/img/nosotros.jpg" alt="" />
-              </div>
-              <div>
-                <div></div>
-                <p>Fecha: 22 de Octubre de 2022</p>
-                <p>Escrito por: TiendaMuebles</p>
-              </div>
-              <div>
-                <p>
-                  Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                  Obcaecati, adipisci! Consequatur blanditiis laboriosam illo
-                  nobis non id sed at, ipsum doloribus labore magni autem
-                  consectetur ad accusantium aliquam quae debitis?
-                </p>
-                <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Inventore asperiores beatae aspernatur debitis neque laborum
-                  incidunt omnis enim! Quae eaque totam sit dicta fugiat optio
-                  culpa sunt cumque atque aliquam?
-                </p>
-                <button>Leer</button>
-              </div>
-            </article>
-            <article>
-              <h2>Guía de Colores</h2>
-              <div>
-                <img src="/reto2/img/nosotros.jpg" alt="" />
-              </div>
-              <div>
-                <div></div>
-                <p>Fecha: 22 de Octubre de 2022</p>
-                <p>Escrito por: TiendaMuebles</p>
-              </div>
-              <div>
-                <p>
-                  Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                  Obcaecati, adipisci! Consequatur blanditiis laboriosam illo
-                  nobis non id sed at, ipsum doloribus labore magni autem
-                  consectetur ad accusantium aliquam quae debitis?
-                </p>
-                <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Inventore asperiores beatae aspernatur debitis neque laborum
-                  incidunt omnis enim! Quae eaque totam sit dicta fugiat optio
-                  culpa sunt cumque atque aliquam?
-                </p>
-                <button>Leer</button>
-              </div>
-            </article>
-          </div>
-          <nav>
-            <h3>Otras Entradas de Blog</h3>
-            <ul>
-                <li>
-                    <a href="#">Guía de Colores</a>
-                </li>
-                <li>
-                    <a href="#">Nuevos Modelos</a>
-                </li>
-                <li>
-                    <a href="#">Guía para diseño de Interiores</a>
-                </li>
-                <li>
-                    <a href="#">Guía para diseño de Exteriores</a>
-                </li>
-            </ul>
+          <article>
+            <h2>Guía de Colores</h2>
+            <div>
+              <img src="/reto2/img/nosotros.jpg" alt="" />
             </div>
-        </nav>
+            <div>
+              <div></div>
+              <p>Fecha: 22 de Octubre de 2022</p>
+              <p>Escrito por: TiendaMuebles</p>
+            </div>
+            <div>
+              <p>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                Obcaecati, adipisci! Consequatur blanditiis laboriosam illo
+                nobis non id sed at, ipsum doloribus labore magni autem
+                consectetur ad accusantium aliquam quae debitis?
+              </p>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Inventore asperiores beatae aspernatur debitis neque laborum
+                incidunt omnis enim! Quae eaque totam sit dicta fugiat optio
+                culpa sunt cumque atque aliquam?
+              </p>
+              <button>Leer</button>
+            </div>
+          </article>
+          <article>
+            <h2>Guía de Colores</h2>
+            <div>
+              <img src="/reto2/img/nosotros.jpg" alt="" />
+            </div>
+            <div>
+              <div></div>
+              <p>Fecha: 22 de Octubre de 2022</p>
+              <p>Escrito por: TiendaMuebles</p>
+            </div>
+            <div>
+              <p>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                Obcaecati, adipisci! Consequatur blanditiis laboriosam illo
+                nobis non id sed at, ipsum doloribus labore magni autem
+                consectetur ad accusantium aliquam quae debitis?
+              </p>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Inventore asperiores beatae aspernatur debitis neque laborum
+                incidunt omnis enim! Quae eaque totam sit dicta fugiat optio
+                culpa sunt cumque atque aliquam?
+              </p>
+              <button>Leer</button>
+            </div>
+          </article>
         </section>
+        <navbar>
+          <h3>Otras Entradas de Blog</h3>
+          <ul>
+            <li>
+              <a href="#">Guía de Colores</a>
+            </li>
+            <li>
+              <a href="#">Nuevos Modelos</a>
+            </li>
+            <li>
+              <a href="#">Guía para diseño de Interiores</a>
+            </li>
+            <li>
+              <a href="#">Guía para diseño de Exteriores</a>
+            </li>
+          </ul>
+        </navbar>
       </main>
       <footer>
         <div>
